[package]
name = "async_bench"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4"
rand = "0.8"
core_affinity = "0.8"
byteorder = "1.4"
libc = "0.2"
lazy_static = "1.4"
page_size = "0.5"
thread-priority = "0.13"
json = "0.12"

[profile.release]
lto = true

[profile.bench]
lto = true

[[bench]]
name = "bench_atomic"
harness = false




